This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _ssl fails building on OS X Tiger
Type: compile error Stage: resolved
Components: Build, Extension Modules Versions: Python 3.4
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: hynek, ned.deily, pitrou, python-dev, ronaldoussoren
Priority: normal Keywords:

Created on 2013-03-30 15:17 by pitrou, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (6)
msg185566 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2013-03-30 15:17
The _ssl module has failed building (on 3.4) on OS X Tiger for a long time:
http://buildbot.python.org/all/builders/x86%20Tiger%203.x/builds/6075/steps/test/logs/stdio

Given the error messages, and given how old OS X Tiger is (according to Google, the system OpenSSL is 0.9.7), I'm inclined to think it is because of missing features on the system OpenSSL.

Is there any point in supporting OS X Tiger in 3.4? Should the _ssl module be updated to use conditionals for "new" (i.e. < 7 years old) OpenSSL features?
msg185569 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-03-30 15:34
New changeset 02f9335b7efb by Antoine Pitrou in branch 'default':
Issue #17581: try to fix building on old OpenSSL versions
http://hg.python.org/cpython/rev/02f9335b7efb
msg185570 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-03-30 15:41
New changeset ad9effdc0ac3 by Antoine Pitrou in branch 'default':
Further compiling fixes (issue #17581)
http://hg.python.org/cpython/rev/ad9effdc0ac3
msg185571 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2013-03-30 15:47
Ok, some of the features here are relatively new (they are only 3 years old), so it makes sense to conditionally enable them. The question remains of whether Tiger is an useful target to support, though.
msg185573 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2013-03-30 16:19
This is fixed. I'll let other people settle the support issue.
msg185581 - (view) Author: Ned Deily (ned.deily) * (Python committer) Date: 2013-03-30 17:40
Thanks for fixing the break.  As time goes on, active support of 10.4 Tiger becomes less important but having the buildbot there is an inexpensive way to test backward compatibility, issues that might also arise on other platforms.  For 2.7.x and 3.2.x, we still produce 32-bit binary installers that support 10.3 and later systems.  For 3.3.x, the released 32-bit binary installer support now only supports 10.5 and later.  However, the daily DMG building still produces the 10.3 variant for 3.3 and I still occasionally build and test those variants.  I know there are still some users of these older systems out there as I see bug reports about them to other projects (e.g. MacPorts).  If we reach a point where it becomes more difficult to fully support 10.4, we can revisit the question.
History
Date User Action Args
2022-04-11 14:57:43adminsetgithub: 61781
2013-03-30 17:40:53ned.deilysetmessages: + msg185581
2013-03-30 16:19:24pitrousetstatus: open -> closed
resolution: fixed
messages: + msg185573

stage: resolved
2013-03-30 15:47:54pitrousetmessages: + msg185571
2013-03-30 15:41:28python-devsetmessages: + msg185570
2013-03-30 15:34:35python-devsetnosy: + python-dev
messages: + msg185569
2013-03-30 15:17:37pitroucreate