Issue #17581: try to fix building on old OpenSSL versions